force-app/main/default/objects/Log__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>Apex Class Name.</description>
    <inlineHelpText>Apex Class Name.</inlineHelpText>
    <label>Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>