force-app/main/default/objects/Log__c/fields/Line__c.field-meta.xml
<CustomField>
    <fullName>Line__c</fullName>
    <description>Line number in the Apex Class.</description>
    <inlineHelpText>Line number in the Apex Class.</inlineHelpText>
    <label>Line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>