force-app/main/default/objects/Log__c/listViews/latessstsdsdsd.listView-meta.xml
<ListView>
    <fullName>latessstsdsdsd</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>latessst</label>
</ListView>